# rigidfibers_kth

./: .cproject  .gitignore  .project  CMakeLists.txt  NOTES  README  README.md  automate_benchmarks.sh  density.sh  fibers_runner.py  results.csv  run.py  sphere_density.sh  sphere_number.sh
benchmarks/: assemble_system.txt  bower.json  cuda_bicgstab_analytical_2D.csv  cuda_gmres_analytical_2D.csv  cuda_magma_numerical_2D.csv  index.html  main.js  number_of_fibers.txt  openmp_direct_numerical.csv  openmp_gmres_analytical.csv  overall.csv  overall.txt  results.csv
benchmarks/raw/: 201409081026.csv  201409081239.csv  fortran_100_analytic_direct.csv  fortran_100_analytic_gmres.csv  fortran_100_numeric_direct.csv  fortran_100_numeric_gmres.csv
benchmarks/spec/: ex_stacked_area.json
benchmarks_old/: assemble_system.txt  index.html  steps_2D_gmres.csv
docs/: description.docx  gpu_prices.xlsx  memory_consumption.xlsx  schedule.xlsx  specification.docx
docs/paper/: build.sh  charts.tex  kth_svv_enginee_sciences.eps  modifications.sty  monitor.sh  thesis.bib  thesis.pdf.bak  thesis.tex  thesis_micro.tex  thesis_template.tex
docs/paper/benchmarks/: .~lock.assemble_system_grid.csv#  assemble_system.csv  assemble_system_grid.csv  cuda_bicgstab_analytical_2D.csv  cuda_bicgstab_numerical_2D.csv  cuda_gmres_analytical_2D.csv  cuda_gmres_numerical_2D.csv  cuda_magma_numerical_1D.csv  cuda_magma_numerical_2D.csv  cuda_magma_numerical_3D.csv  katarina_gmres_analytical.csv  openmp_direct_analytical.csv  openmp_direct_numerical.csv  openmp_gmres_analytical.csv  openmp_gmres_numerical.csv  overall.csv  steps.csv  steps_fortran.csv  steps_fortran_new.csv
docs/paper/benchmarks_645/: katarina_gmres_analytical.csv  openmp_direct_analytical.csv  openmp_direct_numerical.csv
docs/paper/benchmarks_gpu/: cuda_bicgstab_numerical_2D.csv  cuda_gmres_numerical_2D.csv  cuda_magma_numerical_1D.csv  cuda_magma_numerical_3D.csv
docs/paper/benchmarks_random/: cuda_gmres_numerical_2D.csv  cuda_magma_numerical_1D.csv  cuda_magma_numerical_2D.csv  openmp_direct_numerical.csv  openmp_gmres_numerical.csv
docs/paper/charts/: concentration_breakup.csv  concentration_gmres.csv  cpu_performance.csv  density_gmres.csv  double_gpu_performance.csv  number_breakup.csv  ring_sedimentation.csv  single_gpu_performance.csv  sphere_2000_0040.csv  sphere_2000_0040_highlight.csv
docs/paper/img/: immersed.ai  immersed_rigid.ai  slender.ai  stokeslet.ai
docs/paper/lst/: assemble_system.lst  benchmark_scheme.lst  cuda_matrix_add.lst  cuda_vector_add.lst  parallel_algorithm.lst  update_fibers.lst  update_velocities.lst
docs/paper/tex/: appendix.tex  benchmark.tex  conclusion.tex  experiment.tex  gpu.tex  introduction.tex  parallel.tex  serial.tex  theoretical.tex
fortran/: CMakeLists.txt  Int_analytical.f90  Makefile  XcT_gen1000.in  XcT_gen800.in  XcT_init1.in  XcT_init1000.in  XcT_init1024.in  XcT_init160.in  XcT_init224.in  XcT_init400.in  XcT_init480.in  XcT_init500.in  XcT_init600.in  XcT_init800.in  XcT_init992.in  advect_fibers.f90  benchmark.py  coeffs_and_vels.f90  compute_inner_integral_analytically.incl  constants.incl  fibers.f95  matrix_assembly.f90  quadrature.f90  results.csv  run100.in  run1000.in  run100_iter.in  solve_system.incl  update_velocities.incl
fortranMP/: Makefile  benchmark.py  constants.incl  fibers.fpp
fortran_katarina/: Int_analytical.f90  Makefile  XcT_init100.in  XcT_init128.in  XcT_init192.in  XcT_init200.in  XcT_init256.in  XcT_init32.in  XcT_init320.in  XcT_init352.in  XcT_init384.in  XcT_init400.in  XcT_init448.in  XcT_init500.in  XcT_init544.in  XcT_init576.in  XcT_init608.in  XcT_init640.in  XcT_init672.in  XcT_init700.in  XcT_init704.in  XcT_init736.in  XcT_init832.in  XcT_init928.in  XcT_init960.in  advect_fibers.f90  blas_rot.f  coeffs_and_vels.f90  matrix_assembly.f90  quadrature.f90  report_sedimentation.sh  run100_iter.in  run16.in
matlab/: fibers.m  fibers_sediment.m  fibers_state.m  fibers_stats.m  fibers_velocity.m  postprocess.sh
runner/: cuda_runner.py  fortran_runner.py
src/: ADVECT_FIBERS.objs  CMakeLists.txt  Int_analytical.f90  Makefile  advect_fibers.f90  coeffs_and_vels.f90  common.h  dGMRES.f  fiberopt.h  main.cc  main.cu  matrix_assembly.f90  parameters.cc  parameters.h  performance.cc  performance.h  quadrature.f90  resources.cc  resources.h  run100.in  simulation.cc  simulation.cu  simulation.h  write_MATLAB.f90
src/kernels/: assemble_matrix.cl  assemble_system.cl  assemble_system.cu  assemble_system_1D.cu  assemble_system_2D.cu  assemble_system_3D.cu  compute_inner_integral_analytically.cu  compute_inner_integral_numerically.cu  constants.cu  eye_matrix.cu  saxpy.cu  update_fibers.cl  update_fibers.cu  update_fibers_firststep.cl  update_fibers_firststep.cu  update_velocities.cl  update_velocities.cu  update_velocities_2D.cu  vadd.cl
src/ocl/: cldevice.cc  cldevice.h  clplatform.cc  clplatform.h  clutils.cc  clutils.h
tests/: XcT_gen100.in  XcT_gen128.in  XcT_gen200.in  XcT_gen288.in  XcT_gen300.in  XcT_gen416.in  XcT_gen512.in  XcT_gen600.in  XcT_gen64.in  XcT_gen700.in  XcT_gen704.in  XcT_gen768.in  XcT_gen864.in  XcT_gen896.in  XcT_gen900.in  XcT_gen96.in  XcT_ring20.in  config.ini
tools/: XcT_gen1000.in  XcT_gen1000_random.in  XcT_gen1000_zorder.in  XcT_gen2000.in  XcT_gen2000_zorder.in  build.sh  gen  gen.f95  gen.py  gen2.f95  gen2.py  gen_sphere.py  sort.py  validate.py  validate_mapping.py
tools/sphere2000_01_06/: XcT_gen2000.in
tools/sphere2000_01_08/: XcT_gen2000.in
tools/sphere2000_01_10/: XcT_gen2000.in
tools/sphere2000_01_12/: XcT_gen2000.in
tools/sphere2000_01_14/: XcT_gen2000.in
tools/sphere2000_01_16/: XcT_gen2000.in
tools/sphere2000_01_18/: XcT_gen2000.in
